fix: scrollbar on burn records and leaderboards

--- a/src/styles/Scrollbar.module.scss
+++ b/src/styles/Scrollbar.module.scss
@@ -1,21 +1,21 @@
 /* scroller width */
-.leaderboard-scroller::-webkit-scrollbar {
+.styled-scrollbar::-webkit-scrollbar {
   width: 5px;
   height: 5px;
 }
 
 /* scroller track */
-.leaderboard-scroller::-webkit-scrollbar-track {
+.styled-scrollbar::-webkit-scrollbar-track {
   background: rgb(27,34,54); /* tangaroa */
 }
 
 /* scroller handle */
-.leaderboard-scroller::-webkit-scrollbar-thumb {
+.styled-scrollbar::-webkit-scrollbar-thumb {
   border-radius: 3px;
   border: 3px solid white;
 }
 
 /* scroller handle on hover */
-.leaderboard-scroller::-webkit-scrollbar-thumb:hover {
+.styled-scrollbar::-webkit-scrollbar-thumb:hover {
   border-color: rgb(181,189,219); /* spindle */
 }
